<resources>
    <string name="app_name">一防萬疫\n居家隔離者</string>
    <string name="TaipeiCity">台北市</string>
    <string name="NewTaipeiCity">新北市</string>
    <string name="TaichungCity">台中市</string>
    <string name="KeelungCity">基隆市</string>
    <string name="YilanCounty">宜蘭縣</string>
    <string name="ChanghuaCounty">彰化縣</string>
    <string name="MiaoliCounty">苗栗縣</string>
    <string name="HsinchuCity">新竹市</string>
    <string name="TaoyuanCity">桃園市</string>
    <string name="HsinchuCounty">新竹縣</string>
    <string name="NantouCounty">南投縣</string>
    <string name="YunlinCounty">雲林縣</string>
    <string name="ChiayiCounty">嘉義縣</string>
    <string name="ChiayiCity">嘉義市</string>
    <string name="TainanCity">台南市</string>
    <string name="KaohsiungCity">高雄市</string>
    <string name="PingtungCounty">屏東縣</string>
    <string name="PenghuCounty">澎湖縣</string>
    <string name="HualienCounty">花蓮縣</string>
    <string name="TaitungCounty">台東縣</string>
    <string name="LianjiangCounty">連江縣</string>
    <string name="KinmenCounty">金門縣</string>
    <string name="_1999">1999</string>
    <string name="_035216121304">03-521612轉1304</string>
    <string name="_035216121502">03-521612轉1502</string>
    <string name="_035266016">03-5266016</string>
    <string name="_038226975">03-8226975</string>
    <string name="Nonworkinghours">非上班時間：</string>
    <string name="_0224252119206">02-24252119轉206</string>
    <string name="_0224252119207">02-24252119轉207</string>
    <string name="_0224252119208">02-24252119轉208</string>
    <string name="_082330751">082-330751</string>
    <string name="_082330697">082-330697</string>
    <string name="_037559520">037-559520</string>
    <string name="_0492220904">049-2220904</string>
    <string name="_0492246048">049-2246048</string>
    <string name="_042228911121698">042-2289111轉21698</string>
    <string name="_042228911121697">042-2289111轉21697</string>
    <string name="_042228911121696">042-2289111轉21696</string>
    <string name="_089352674214">089-352674轉214</string>
    <string name="_089331171217">089-331171轉217</string>
    <string name="_0900739538">0900-739538</string>
    <string name="_0975288155">0975-288155</string>
    <string name="Homequarantine">居家檢疫：</string>
    <string name="Homeisolation">居家隔離：</string>
    <string name="_033335530">03-3335530</string>
    <string name="_033366730">03-3366730</string>
    <string name="_0800033355">0800-033355</string>
    <string name="_039357011">03-9357011</string>
    <string name="todo">TODO</string>
    <string name="LoginPhoneNumber">手機</string>
    <string name="LoginPassword">密碼</string>
    <string name="LoginSignIn">登入</string>
    <string name="LoginRegistered">註冊</string>
</resources>