<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneNumber.PhoneTaitungCounty">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/Phone_TaitungCounty_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_089352674214"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/Phone_TaitungCounty_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_089331171217"
            android:textSize="30sp"></Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/Nonworkinghours"
            android:textSize="30sp"></TextView>

        <Button
            android:id="@+id/Phone_TaitungCounty_btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_0900739538"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/Phone_TaitungCounty_btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_0975288155"
            android:textSize="30sp"></Button>

    </LinearLayout>

</RelativeLayout>