<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneNumber.PhoneHsinchuCity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/Phone_HsinchuCity_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_035266016"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/Phone_HsinchuCity_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_035216121304"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/Phone_HsinchuCity_btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_035216121502"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/Phone_HualienCounty_btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_1999"
            android:textSize="30sp"></Button>

    </LinearLayout>

</RelativeLayout>