<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="185dp"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:ems="12"
                android:inputType="number"
                android:hint="手機號碼"
                android:textColorHint="#FF57AC94"/>
        </com.google.android.material.textfield.TextInputLayout>
        

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:ems="12"
                android:hint="密碼"
                android:inputType="textPassword"
                android:textColorHint="#FF57AC94"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button
        android:id="@+id/login_confirm_btn"
        android:text="@string/LoginSignIn"
        android:textSize="24sp"
        android:textColor="#ffff"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_style5" />

        <Button
            android:visibility="invisible"
            android:id="@+id/register_btn"
            android:text="@string/LoginRegistered"
            android:textSize="24sp"
            android:textColor="#35A58D"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/button_style2"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
</RelativeLayout>